# pool-playing-robot

./: .gitignore  README.md  TODO.md  To-do.md  pyproject.toml  setup.py
arduino/: abs_manual.ino  homing.ino  homing_mike.ino  manual_serial_control.ino  manual_serial_with_limit_switch.ino  micro_limit_switch.ino  py_serial.py  serial_control.ino  solenoid_test.ino
data/: calibration_image_data.csv  calibration_pixel_to_step.csv  cameraMatrix.npy  dist.npy  inverse_kinematics.pkl  repeatability_error.csv  repeatability_image_data.csv  rvec.npy  tvec.npy
deep_learning/: billiard_env.py  brute_force.py  brute_force_data.csv  debug_config.py  deep_learning_model.py  generate_dataset.py  main.py  model_action_pred.ipynb  my_version.py  pool_sim_data.csv  pool_sim_data_header.csv  pymunk_sim.py  run_pool_sim.py
docs/: main.md
dynamixel/: dynamixel.py  simplified_dynamixel.py
dynamixel_analysis/: mod_data_1.csv  mod_data_2.csv  mod_data_6.csv  step_data_p30.csv  step_data_p40.csv  step_data_p50.csv  step_data_p60.csv  system_identification.py
error_analysis/: data_analysis.ipynb
sketches/: background_substraction.py  calibration.py  debug_pixel_to_steps.py  first_order_shot.py  fourth_order_shot.py  main.py  model_pixel_to_step.ipynb  pinball_flipper.py  pinball_flipper_brute_force.py  pixel_to_steps.py  pool_frame.py  second_order_shot.py  shot_selection.py  sketch_calibration.py  sketch_cam.py  sketch_detect_aruco.py  sketch_dynamixel.py  sketch_error_analysis.py  sketch_get_corners.py  sketch_get_data_pixel_to_steps.py  sketch_get_data_repeatability.py  sketch_pixel_to_steps.py  sketch_pixel_to_steps_offline.py  sketch_pixel_to_steps_online.py  sketch_pool_frame.py  sketch_processed_image.py  sketch_repeatibility.py  sketch_stepper.py  sketch_yolo.py  sketch_yolo_annotations.py  (+5 more)
(+249 files in other folders)
