[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automatic_pool_robot"
version = "0.0.1"
authors = [
  { name="Eduard Almar", email="edu12due@gmail.com" },
]
description = "An automatic pool playing robot"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dynamixel-sdk",
    "keyboard",
    "matplotlib",
    "numpy",
    "opencv-contrib-python>=4.7",
    "opencv-python",
    "pandas",
    "pyserial",
    "rich",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "ultralytics",
]

[project.urls]
"Homepage" = "https://github.com/opticsensors/pool-playing-robot"
"Bug Tracker" = "https://github.com/opticsensors/pool-playing-robot/issues"